# fairRepack-C-application

./: CMakeLists.txt  README.md  install.sh
src/common/: datestamp.c  datestamp.h
src/extractor/: Configuration.c  Location.h  ftp.c  ftp.h  ftpmem.c  ftpmem2.c  main.c
src/merger/: main.c
